--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,11 @@
 {
   "version": 2,
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/baidu/(.*)",
-      "dest": "https://aip.baidubce.com/$1",
-      "headers": {
-        "Access-Control-Allow-Origin": "https://www.yuyuan.xz.cn",
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization",
-        "Access-Control-Allow-Credentials": "true"
-      }
+      "source": "/api/baidu/(.*)",
+      "destination": "https://aip.baidubce.com/$1"
     }
   ],
-  "functions": {
-    "api/baidu/**/*.js": {
-      "maxDuration": 30
-    }
-  },
   "headers": [
     {
       "source": "/api/baidu/(.*)",
@@ -32,6 +21,10 @@
         {
           "key": "Access-Control-Allow-Headers",
           "value": "Content-Type, Authorization"
+        },
+        {
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
         }
       ]
     }
